--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Frontend Developer Task</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <meta charset="utf-8" />
+    <link rel="icon" href="./images/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="photography website created using html and css." />
+    <link rel="apple-touch-icon" href="./images/apple-touch-icon.png" />
+    <title>Photography</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.css" rel="stylesheet" />
     <link href="./css/style.css" rel="stylesheet" />
   </head>
   <body>
-    <!-- Header section start -->
-    <header id="home">
+    <div id="home">      
+      <!-- Header section start -->
+      <header>
         <nav class="navbar fixed-top navbar-expand-lg">
             <div class="container">
               <a class="navbar-brand" href="#home">
@@ -38,19 +43,19 @@
               </div>
             </div>
         </nav>
-    </header>
-    <!-- Header section end -->
+      </header>
+      <!-- Header section end -->
     
-    <!-- Home slider section start -->
-    <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="false">
+      <!-- Home slider section start -->
+      <div id="homeSliderCarousel" class="carousel slide carousel-fade" data-bs-ride="false">
         <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#homeSliderCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#homeSliderCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#homeSliderCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./images/gallary10.jpg" class="d-block w-100" alt="...">
+            <img src="./images/gallary10.jpg" class="d-block w-100" alt="slide-1">
             <div class="background-overlay"></div>
             <div class="carousel-caption d-none d-md-block">
               <h2>Creative Photography Studio</h2>
@@ -58,7 +63,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./images/gallery14.jpg" class="d-block w-100" alt="...">
+            <img src="./images/gallery14.jpg" class="d-block w-100" alt="slide-2">
             <div class="background-overlay"></div>
             <div class="carousel-caption d-none d-md-block">
               <h2>Unique Moments</h2>
@@ -66,7 +71,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./images/gallary12.jpg" class="d-block w-100" alt="...">
+            <img src="./images/gallary12.jpg" class="d-block w-100" alt="slide-3">
             <div class="background-overlay"></div>
             <div class="carousel-caption d-none d-md-block">
               <h2>Emotions and Happiness</h2>
@@ -74,62 +79,60 @@
             </div>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#homeSliderCarousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#homeSliderCarousel" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+      </div>
+      <!-- Home slider section end -->
     </div>
-    <!-- Home slider section end -->
 
     <!-- about section start -->
-    <div id="about">
-      <section class="pb-0">
-          <div class="container">
-              <div class="row justify-content-center">
-                  <div class="col-lg-8 text-center">
-                      <h1>We're a small and enthusiastic photography studio</h1>
-                      <p>We love photography and travel for meeting new beautiful people all over the world. Propriae voluptaria dissentias nam ei, posse diceret inciderint cum ut, gubergren sadipscing ei vim. Ancillae torquatos in nec, impetus nostrum ea eos.</p>
-                  </div>
-              </div>
-          </div>
-      </section>
-      <section class="textContentBox">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6">
+    <section id="about">
+      <div class="container">
+        <div class="row justify-content-center mb-5">
+            <div class="col-lg-9 text-center">
+                <h1 class="mb-4">We're a small and enthusiastic photography studio</h1>
+                <p>We love photography and travel for meeting new beautiful people all over the world. Propriae voluptaria dissentias nam ei, posse diceret inciderint cum ut, gubergren sadipscing ei vim. Ancillae torquatos in nec, impetus nostrum ea eos.</p>
+            </div>
+        </div>
+
+        <div class="textContentBox">
+          <div class="row mb-4">
+            <div class="col-lg-6 order1">
               <div class="imagebox first">
                 <img src="./images/gallary5.jpg" alt="image" />
               </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6 order2">
               <div class="textBoxes">
                 <h3>Hi, I'm Maulik Vaghela <br />A passionate photographer</h3>
-                <p>Veri ubique cu eam, vero dicta ridens ei quo, ex putent menandri accommodare sed. Sale dicta dolore pri et, an aliquam albucius volutpat est. Te vis veniam detracto, tollit alterum graecis his ut. Essent perfecto vel et, cu est tantas putent.</p>
-                <p>Veri ubique cu eam, vero dicta ridens ei quo, ex putent menandri accommodare sed. Suscipit lobortis prodesset ut eam. aliquam albucius volutpat est. Te vis veniam detracto.</p>
+                <p>Veri ubique cu eam, vero dicta ridens ei quo, ex putent menandri accommodare sed. Sale dicta dolore pri et, an aliquam albucius volutpat est.</p>
+                <p>Veri ubique cu eam, vero dicta ridens ei quo, ex putent menandri accommodare sed. Suscipit lobortis prodesset ut eam. aliquam albucius volutpat est.</p>
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-lg-6 order2">
               <div class="textBoxes">
                 <h3>Hi, I'm Maulik Vaghela <br />A passionate photographer</h3>
-                <p>Veri ubique cu eam, vero dicta ridens ei quo, ex putent menandri accommodare sed. Sale dicta dolore pri et, an aliquam albucius volutpat est. Te vis veniam detracto, tollit alterum graecis his ut. Essent perfecto vel et, cu est tantas putent.</p>
-                <p>Veri ubique cu eam, vero dicta ridens ei quo, ex putent menandri accommodare sed. Suscipit lobortis prodesset ut eam. aliquam albucius volutpat est. Te vis veniam detracto.</p>
+                <p>Veri ubique cu eam, vero dicta ridens ei quo, ex putent menandri accommodare sed. Sale dicta dolore pri et, an aliquam albucius volutpat est.</p>
+                <p>Veri ubique cu eam, vero dicta ridens ei quo, ex putent menandri accommodare sed. Suscipit lobortis prodesset ut eam. aliquam albucius volutpat est.</p>
               </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6 order1">
               <div class="imagebox second">
                 <img src="./images/gallary7.jpg" alt="image" />
               </div>
             </div>
           </div>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
     <!-- about section end -->
 
     <!-- work gallery section start -->
@@ -241,7 +244,7 @@
                       </div>
                       <div class="testimonialsContent">
                         <p>Zen Doan was not only a master behind the camera but also a true professional. They arrived on time, maintained a friendly and approachable demeanor, and made us feel at ease throughout the session.</p>
-                        <h2>Zen</h2>
+                        <h4>Zen</h4>
                       </div>
                     </div>
                   </div>
@@ -252,7 +255,7 @@
                       </div>
                       <div class="testimonialsContent">
                         <p>A good photographer must be able to look at something ordinary, or even extraordinary, and find a million different ways to interpret what he’s seeing and convey those interpretations in beautiful and meaningful photos.</p>
-                        <h2>Jonathan</h2>
+                        <h4>Jonathan</h4>
                       </div>
                     </div>
                   </div>
@@ -263,7 +266,7 @@
                       </div>
                       <div class="testimonialsContent">
                         <p>A good photographer must have a very keen eye for detail to ensure that all elements within the photo—the lighting, the composition, the subject, and everything else in between—work together harmoniously to convey the right vision or message.</p>
-                        <h2>Charlie</h2>
+                        <h4>Charlie</h4>
                       </div>
                     </div>
                   </div>
@@ -286,7 +289,7 @@
     <!-- footer section start -->
     <footer>
       <div class="footer-copyright">
-        <div class="footer-copyright-wrapper">
+        <div class="container">
           <p class="footer-copyright-text">
             &copy; <script type="text/javascript">document.write(new Date().getFullYear());</script>. | Designed By: MV-Developer. | All rights reserved.
           </p>
@@ -296,7 +299,7 @@
     <!-- footer section end -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.js"></script>
     <script src="./js/script.js"></script>
