--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.css" rel="stylesheet" />
+    <link href="https://unpkg.com/aos@2.3.0/dist/aos.css" rel="stylesheet" />
     <link href="./css/style.css" rel="stylesheet" />
   </head>
   <body>
@@ -73,7 +74,7 @@
           <div class="carousel-item">
             <img src="./images/gallary12.jpg" class="d-block w-100" alt="slide-3">
             <div class="background-overlay"></div>
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-none d-md-block" data-aos="fade-up">
               <h2>Emotions and Happiness</h2>
               <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
             </div>
@@ -95,7 +96,7 @@
     <section id="about">
       <div class="container">
         <div class="row justify-content-center mb-5">
-            <div class="col-lg-9 text-center">
+            <div class="col-lg-9 text-center" data-aos="fade-up">
                 <h1 class="mb-4">We're a small and enthusiastic photography studio</h1>
                 <p>We love photography and travel for meeting new beautiful people all over the world. Propriae voluptaria dissentias nam ei, posse diceret inciderint cum ut, gubergren sadipscing ei vim. Ancillae torquatos in nec, impetus nostrum ea eos.</p>
             </div>
@@ -104,12 +105,12 @@
         <div class="textContentBox">
           <div class="row mb-4">
             <div class="col-lg-6 order1">
-              <div class="imagebox first">
+              <div class="imagebox first" data-aos="zoom-in">
                 <img src="./images/gallary5.jpg" alt="image" />
               </div>
             </div>
             <div class="col-lg-6 order2">
-              <div class="textBoxes">
+              <div class="textBoxes" data-aos="slide-up">
                 <h3>Hi, I'm Maulik Vaghela <br />A passionate photographer</h3>
                 <p>Veri ubique cu eam, vero dicta ridens ei quo, ex putent menandri accommodare sed. Sale dicta dolore pri et, an aliquam albucius volutpat est.</p>
                 <p>Veri ubique cu eam, vero dicta ridens ei quo, ex putent menandri accommodare sed. Suscipit lobortis prodesset ut eam. aliquam albucius volutpat est.</p>
@@ -118,14 +119,14 @@
           </div>
           <div class="row">
             <div class="col-lg-6 order2">
-              <div class="textBoxes">
+              <div class="textBoxes" data-aos="slide-up">
                 <h3>Hi, I'm Maulik Vaghela <br />A passionate photographer</h3>
                 <p>Veri ubique cu eam, vero dicta ridens ei quo, ex putent menandri accommodare sed. Sale dicta dolore pri et, an aliquam albucius volutpat est.</p>
                 <p>Veri ubique cu eam, vero dicta ridens ei quo, ex putent menandri accommodare sed. Suscipit lobortis prodesset ut eam. aliquam albucius volutpat est.</p>
               </div>
             </div>
             <div class="col-lg-6 order1">
-              <div class="imagebox second">
+              <div class="imagebox second" data-aos="zoom-in">
                 <img src="./images/gallary7.jpg" alt="image" />
               </div>
             </div>
@@ -139,7 +140,7 @@
     <section id="work" class="bgGradient">
       <div class="container">
         <div class="row">
-          <div class="col">
+          <div class="col" data-aos="slide-up">
             <h2 class="text-center mb-4">My Work</h2>
             <div id="gallery" class="gallery-wrapper gallery">
               <div class="gallery-container w-3 h-3">
@@ -235,7 +236,7 @@
         <div class="row">
           <div class="col">
             <h2 class="text-center mb-4">Testimonials</h2>
-            <div id="testimonialsSliderBox" class="carousel slide">
+            <div id="testimonialsSliderBox" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                   <div class="carousel-item active">
                     <div class="carouselBox">
@@ -302,6 +303,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.0/dist/aos.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
